force-app/main/default/objects/AsyncRequest__c/AsyncRequest__c.object-meta.xml
<CustomObject>
    <label>Async Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Async Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>