force-app/main/default/objects/AsyncRequest__c/fields/Aborted__c.field-meta.xml
<CustomField>
    <fullName>Aborted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies this async request job has been aborted due to too many failed attempts</description>
    <inlineHelpText>Signifies this async request job has been aborted due to too many failed attempts</inlineHelpText>
    <label>Aborted</label>
    <type>Checkbox</type>
</CustomField>