force-app/main/default/objects/AsyncRequest__c/fields/AsyncType__c.field-meta.xml
<CustomField>
    <fullName>AsyncType__c</fullName>
    <label>AsyncType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>