force-app/main/default/objects/AsyncRequest__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this async request has been attempted</description>
    <inlineHelpText>Number of times this async request has been attempted</inlineHelpText>
    <label>Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>