force-app/main/default/objects/AsyncRequest__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>Id of the root Queueable Apex job associated with this async request, if any</description>
    <inlineHelpText>Id of the root Queueable Apex job associated with this async request, if any</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>