force-app/main/default/objects/AsyncRequest__c/fields/MaxAttempts__c.field-meta.xml
<CustomField>
    <fullName>MaxAttempts__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Determines the maximum number of times this async request should run before it is aborted</description>
    <inlineHelpText>Determines the maximum number of times this async request should run before it is aborted</inlineHelpText>
    <label>Max Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>