force-app/main/default/objects/AsyncRequest__c/fields/ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>